--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -321,7 +321,7 @@ tr:nth-child(even) {
 }
 
 #footer .social{
-	font-size: 3rem;
+	font-size: 15pt;
 	text-align: center;
 	color: white;
 	margin: 20px;
