--- a/templates/base.html
+++ b/templates/base.html
@@ -66,8 +66,6 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/educational_visits/about">About</a></li>
-                            <li><a class="dropdown-item" href="/educational_visits/resources">Resources</a></li>
-                            <li><a class="dropdown-item" href="/educational_visits/persons">Persons</a></li>
                             <li><a class="dropdown-item" href="/educational_visits/gallery">Gallery</a></li>
                         </ul>
                     </li>
@@ -79,6 +77,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/vigyan_pratibha/about">About</a></li>
                             <li><a class="dropdown-item" href="/vigyan_pratibha/resource_persons">Resource Persons</a></li>
+                            <li><a class="dropdown-item" href="https://vigyanpratibha.in/">HBCSE Site</a></li>
                             <li><a class="dropdown-item" href="/vigyan_pratibha/gallery">Gallery</a></li>
                         </ul>
                     </li>
@@ -148,14 +147,12 @@
     <section id="footer">
         <div class="footer container">
             <h2>NISER Outreach Committee</h2>
-            <a class="social git" href="#" title="Link to GitHub" target="_blank"><i class="fab fa-git-alt"></i></a>
-            <a class="social facebook" href="#" title="Link to our Facebook Page" target="_blank"><i
-                    class="fab fa-facebook"></i></a>
-            <a class="social insta" href="#" title="Link to our Instagram Page" target="_blank"><i
-                    class="fab fa-instagram"></i></a>
-            <a class="social mail" href="#" title="Mail Us" target="_blank"><i class="far fa-envelope"></i></a>
+            <h4>Dr. Debasmita P. Alone</h4>
+            <h4>Chairperson, Outreach Committee</h4>
+            <a href="debasmita@niser.ac.in"><div class="social mail" title="Mail Us" target="_blank"><i class="far fa-envelope"></i>&nbsp;debasmita@niser.ac.in</div></a>
             <h3>National Institute of Science Education and Research</h3>
             <h4>Bhubaneswar, India</h4><br>
+            
             <h4>This page is prepared by Aritra Mukhopadhyay</h4>
             <h4>Email:- amukherjeeniser@gmail.com</h4>
         </div>
