--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
 					<div class="card-body">
 						<h5 class="card-title">Educational Visits of Schools</h5>
 						<p class="card-text">Inquisitive learners from local schools visit NISER for gaining
-							advanced
-							knowledge on Science and technology every year. <strong>(Click to view more)</strong>
+							advanced knowledge on Science and technology every year. <strong>(Click to view
+								more)</strong>
 						</p>
 					</div>
 				</div>
@@ -100,22 +100,25 @@
 	<div class="infos"><br>
 		<h3>About Us</h3>
 		<p style="text-align: justify">
-			&emsp;&emsp; Science outreach is all about communicating the importance and ideologies of Science with
-			the general population. The general idea is to spread Science among the public in a captivating way
-			which will be encouraging enough for them to think about a future in research or education. NISER is
-			mindful of its social responsibilities and has been reaching out to students and teachers to motivate
-			them in their Scientific pursuit. The activities are coordinated and spread round the year in three
-			categories:
-			<br>&emsp;&emsp;&emsp;&emsp;NISER Open Day,
-			<br>&emsp;&emsp;&emsp;&emsp;Educational Visits of Schools,
-			<br>&emsp;&emsp;&emsp;&emsp;Teacher-training Workshops: Vigyan Pratibha Project.
+			&emsp;&emsp; The Outreach Program at NISER aims to communicate the importance and ideologies of Science with
+			the community. This will help in positive contribution towards science education and technology, thereby
+			enhancing the overall development of the society.
+		</p>
+		<p style="text-align: justify">
+			&emsp;&emsp; As a part of this program, NISER, since it’s inception has been reaching out to students and
+			teachers in nearby schools to motivate them in their scientific pursuit. The activities are coordinated and
+			spread round the year in three categories:
+			<ul>
+			<li>&nbsp; Educational Visits of Schools,</li>
+			<li>&nbsp; NISER Open Day,</li>
+			<li>&nbsp; Teacher-training Workshops under the <strong>Vigyan Pratibha Project</strong>.</li>
+			</ul>
 
 		</p><br>
 		<h3>Our vision</h3>
 		<p style="text-align: justify">
 			&emsp;&emsp; To provides a single window for services such as online and offline education from school
-			to
-			undergraduate level, research programs, online portal for various learning units for schools, online
+			to undergraduate level, research programs, online portal for various learning units for schools, online
 			teachers’ webinars, online and on-site teachers’ workshops, spiritual heritage programs for national and
 			international audiences on current scenario, publication of books, etc. We started with NISER
 			Educational trips where schools and colleges visit different departments at NISER. Then we moved on to
