--- a/templates/vigyan_pratibha/about.html
+++ b/templates/vigyan_pratibha/about.html
@@ -11,11 +11,23 @@
 	<h1 class="text-center">Vigyan Pratibha</h1>
 	<div class="infos"><br>
 		<p style="text-align: justify">
-			&emsp;&emsp; NISER along with Institute of Physics is executing the Vigyan Pratibha Project of the Department of Atomic Energy to train teachers by conducting various teacher-training workshops in Odisha and Chhattisgarh region. Vigyan Pratibha is a novel initiative of Government of India under the aegis of Department of Atomic Energy for extended nurture of talent in Science and Mathematics among school students of Class 8th to 10th in Kendriya Vidyalaya, Jawahar Navodaya Vidyalaya, and Atomic Energy Central Schools across the country.
+			&emsp;&emsp; NISER along with Institute of Physics are partners with Homi Bhabha Centre for Science
+			Education in executing the Vigyan Pratibha Project, which is a novel initiative of
+			Government of India under the aegis of Department of Atomic Energy. One of the main
+			purposes is to train teachers by conducting various teacher-training workshops in the Odisha
+			and Chhattisgarh region.
 		</p>
 		<br>
 		<p style="text-align: justify">
-			&emsp;&emsp; The core of the project will be in the form of learning units that are an extension to the topics taught in classrooms which can deliver practical knowledge and instill the basic concepts in the students. The key aspect of this program is that science circles in schools, in which students will conduct Learning Units developed as a part of the program at Homi Bhabha Centre for Science Education (HBCSE) with the help of faculties all over the country. It also have an exposure dimension as a part of which the students and teachers will get to see high-end scientific research facilities by visits to national scientific institutions.
+			&emsp;&emsp; Vigyan Pratibha serves an unique ‘learning-by-doing’ platform for teachers as well as school
+			students to enhance their scientific and mathematical knowledge. The aim is to combine
+			several pedagogical tools based on constructivism and collaborative learning approaches.
+			Currently at NISER, we are working with students and teachers of classes 8 th and 9 th classes of
+			Kendriya Vidyalaya, Jawahar Navodaya Vidyalaya and Atomic Energy Central Schools all
+			over Odisha. The key aspect of this program is that science circles in schools-in which
+			students will conduct Learning Units- is developed as a part of the program at HBCSE with
+			the help of faculty all over the country. These units are in line with the NCERT curriculum
+			and they help in better concept building in students.
 		</p>
 		<br>
 	</div>
