--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -4,4 +4,11 @@
 {% block title %}Contacts | NISER Outreach{% endblock title %}
 
 {% block content %}
+
+<h3>Please feel free to write to us at <a href = "mailto:outreach@niser.ac.in">outreach@niser.ac.in</a> for further details.</h3><br>
+
+
+<h3>Dr. Debasmita P. Alone</h3><br>
+<h3>Chairperson, Outreach Committee</h3><br>
+
 {% endblock content %}
