--- a/templates/educational_visits/about.html
+++ b/templates/educational_visits/about.html
@@ -9,15 +9,16 @@
 	<h1 class="text-center">Educational Visits</h1>
 	<div class="infos"><br>
 		<p style="text-align: justify">
-			&emsp;&emsp; Educational trip  to a research laboratory is considered as a fundamentally different educational experience from the ones students usually encounter within their formal schooling. There are year-round visits of students and faculty from various institutions who get a first-hand experience of an elite Scientific Institution. NISER faculty members and the Scientific Officers of various Schools continue to participate in educational activities for students and teachers in the country who are not directly connected with NISER.
-		</p>
-		<br>
-		<p style="text-align: justify">
-			&emsp;&emsp; When school students observe the work-life of people at NISER and interact with them, it leads to better achievement, standards, motivation, personal development and behavior in them. These visits also help to enhance the social, personal and emotional development of all participants. They are left with a sense of imagination and new found interest for science. In the past year there have been around 10 educational trips of schools from parts of the country.
-		</p>
-		<br>
-		<p style="text-align: justify">
-			&emsp;&emsp; The results obtained show that the school visits have very positive effects on the students’ level of information about the institutional functioning of the research center while at the affective level they contribute to a deflation of the mythological status of scientific research to its real dimensions.
+			&emsp;&emsp; Educational trips to a research laboratory are considered to be fundamentally enriching
+			educational experiences. There are year-round visits of students and faculty from various
+			institutions across the country who get first-hand experience of a state-of-the-art Scientific
+			Institution. The students are inspired through interactions with the NISER faculty, Scientific
+			Officers and its students. During their visits on any Friday (with prior permission), the school
+			students are not only exposed to a few experiments but they also get to observe the work-life
+			balance of people at NISER. This helps in a better understanding of what is expected of
+			oneself if the students undertake science as a career and enhances the scientific, social, and
+			emotional development of all the participants. The students are left with a sense of
+			imagination and a newfound interest in science.
 		</p>
 		<br>
 	</div>
