--- a/templates/open_day/about.html
+++ b/templates/open_day/about.html
@@ -9,11 +9,18 @@
 	<h1 class="text-center">Open Day</h1>
 	<div class="infos"><br>
 		<p style="text-align: justify">
-			&emsp;&emsp; The Open Day is conducted every year as an outreach activity to introduce young students to different fields of basic sciences and scientific research. Not only does it help school students make informed career choices but also it acts an an excellent opportunity for inducing creative thinking among NISER students who apply the knowledge gained in various coursework to come up with interesting and motivating new experiments every year. 
+			&emsp;&emsp; The Open Day at NISER is conducted every year as an outreach activity to introduce young
+			students to different fields of basic sciences and scientific research. Not only does it help
+			school students make informed career choices but also acts as an excellent opportunity for
+			inducing creative thinking among NISER students who apply this knowledge in various
+			coursework to come up with interesting and motivating experiments every year.
 		</p>
 		<br>
 		<p style="text-align: justify">
-			&emsp;&emsp; The program is aimed for school students (class 8th-12th) and involved lectures by NISER faculty members, laboratory visits and demonstrations conducted by students of the institute. NISER Students from different departments exhibited several experiments demonstrating scientific concepts taught in school as well as some relatively advanced ideas.
+			&emsp;&emsp; The program is aimed for school students (class 8th-12th) and involved lectures by NISER
+			faculty members, laboratory visits and demonstrations conducted by students of the institute. NISER Students
+			from different departments exhibited several experiments demonstrating scientific concepts taught in school
+			as well as some relatively advanced ideas.
 		</p><br>
 	</div>
 </div>
