--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
                             <li><a class="dropdown-item" href="/open_day/about">About</a></li>
                             <li><a class="dropdown-item" href="/open_day/2021">2021</a></li>
                             <li><a class="dropdown-item" href="/open_day/past">Past</a></li>
+                            <li><a class="dropdown-item" href="/open_day/student_coordinators">Student Coordinators</a></li>
                             <li><a class="dropdown-item" href="/open_day/gallery">Gallery</a></li>
                             <!-- <li><a class="dropdown-item" href="/open_day/feedback">Feedback</a></li> -->
                         </ul>
@@ -168,8 +169,8 @@
             <h3>National Institute of Science Education and Research</h3>
             <h4>Bhubaneswar, India</h4><br>
             
-            <h5>This page is prepared by Aritra Mukhopadhyay (Int. M.Sc)</h5>
-            <h5>Email:- amukherjeeniser@gmail.com</h5>
+            <h5 style="color: yellow;">This page is prepared by Aritra Mukhopadhyay (Int. M.Sc)</h5>
+            <h5 style="color: yellow;">Email:- amukherjeeniser@gmail.com</h5>
         </div>
     </section>
     <!-- End Footer -->
@@ -189,3 +190,6 @@ Please feel free to write to us at outreach@niser.ac.in for further details.
 Dr. Debasmita P. Alone
 Chairperson, Outreach Committee
 NISER, Jatni -->
+
+<!-- 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum omnis ipsam corrupti impedit, voluptatem alias quasi nobis illo eius reprehenderit labore non aspernatur velit, placeat at! Enim ipsam reiciendis cumque? Repellendus quam dolor, cumque asperiores quod quas itaque neque magnam et modi voluptas reiciendis voluptates illum nesciunt nisi quidem velit! -->
