--- a/templates/vigyan_pratibha/gallery.html
+++ b/templates/vigyan_pratibha/gallery.html
@@ -10,7 +10,7 @@
 		<h2>December 2019</h2>
 		<div class="images">
 			{% for image in Dec19  %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 		<hr>
@@ -18,7 +18,7 @@
 		<h2>October 2019</h2>
 		<div class="images">
 			{% for image in Oct19 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 		<hr>
@@ -26,7 +26,7 @@
 		<h2>March 2019</h2>
 		<div class="images">
 			{% for image in Mar19 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 		<hr>
@@ -34,7 +34,7 @@
 		<h2>Inauguration 2018</h2>
 		<div class="images">
 			{% for image in ing18 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 
