--- a/templates/open_day/gallery.html
+++ b/templates/open_day/gallery.html
@@ -10,7 +10,7 @@
 		<h2 >2021</h2>
 		<div class="images">
 			{% for image in p2021 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div><hr>
 		<div style="color: red;">*Open Day was not conducted in 2020 due to covid regulations</div>
@@ -19,7 +19,7 @@
 		<h2 >2019</h2>
 		<div class="images">
 			{% for image in p2019 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 		<hr>
@@ -27,7 +27,7 @@
 		<h2 >2018</h2>
 		<div class="images">
 			{% for image in p2018 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 		<hr>
@@ -35,7 +35,7 @@
 		<h2 >2017</h2>
 		<div class="images">
 			{% for image in p2017 %}
-				<a href="{% static image.0 %}" target="_blank"><img src="{% static image.1 %}"></a>
+				<a href="{% static image.0 %}" target="_blank"><img loading="lazy" src="{% static image.1 %}"></a>
 			{% endfor %}
 		</div>
 
